[gd_scene load_steps=15 format=2]

[ext_resource path="res://game/item/FallingItem.gd" type="Script" id=1]
[ext_resource path="res://game/item/flask.png" type="Texture" id=2]
[ext_resource path="res://game/item/paint_temp.png" type="Texture" id=3]
[ext_resource path="res://game/item/hard-glass-impact.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 40 ) ],
"loop": true,
"name": "flask_orange",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "paint_break",
"speed": 6.0
}, {
"frames": [ SubResource( 33 ) ],
"loop": true,
"name": "paint_whole",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=12]
radius = 7.0

[node name="FallingItem" type="Area2D" groups=["FallingItem"]]
z_index = 2
collision_layer = 8
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "flask_orange"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.954 )
shape = SubResource( 12 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.49012e-07, 3.27618 )
scale = Vector2( 0.5, 0.527618 )

[node name="GlassHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Item_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
